# nct

./: .gitignore  COMPLETION_REPORT.md  GIT_PUSH_GUIDE.md  LICENSE  MANIFEST.in  README.md  README_CN.md  README_PYPI.md  __init__.py  arxiv_submission_checklist.md  pyproject.toml  req20260226.txt  requirements.txt  test_hierarchy_fix.py
docs/: NCT 完整实施方案.md  v3.2.1_2026-04-18_实验9意识度量验证改进.md  第一版阶段总结.md
examples/: quickstart.py
experiments/: batched_trainer.py  datasets.py  ednet_adaptive_experiment.py  exp_mnist_few_shot.py  nct_trainer.py  run_all_education_experiments.py  run_anomaly_detection.py  run_anomaly_detection_2b_optimized.py  run_anomaly_detection_adaptive.py  run_anomaly_detection_complete.py  run_anomaly_detection_ensemble.py  run_anomaly_detection_hybrid.py  run_anomaly_detection_simple.py  run_anomaly_detection_strict_voting.py  run_anomaly_detection_supervised.py  run_cat_recognition.py  run_cifar10_full.py  run_cifar10_transfer.py  run_full_mnist_training.py  run_multi_candidate_exp.py  run_nct_vs_cnn.py  run_optimized_training_v2.py  run_optimized_training_v3.py  run_paper_experiments.py  test_batched_architecture.py
experiments/educational_scripts/: daisee_nct_experiment.py  fer_pretrain.py  mema_nct_experiment.py
nct_modules/: __init__.py  __main__.py  nct_anomaly_detector.py  nct_batched.py  nct_cifar10.py  nct_core.py  nct_cross_modal.py  nct_gamma_sync.py  nct_hybrid_learning.py  nct_manager.py  nct_metrics.py  nct_modules.py  nct_predictive_coding.py  nct_workspace.py  patch_predictive_hierarchy.py
spiking_nct/tests/: run_experiment_9_consciousness.py
tests/: test_basic.py  test_complete.py  test_multi_candidate.py  test_phi_salience_fix.py  test_refactor_validation.py
visualization/: nct_dashboard.py
